--- a/src/css/profile_circle.css
+++ b/src/css/profile_circle.css
@@ -11,13 +11,44 @@
     width: 40px; /* Adjust as needed */
     height: 40px; /* Adjust as needed */
     background-color: #ffffff; /* Adjust color as needed */
+    border: 1px solid #000000;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer; /* Add cursor style */
   }
   
   .letter {
     font-size: 24px; /* Adjust font size as needed */
+  }
+  
+  .dropdown-menu {
+    position: absolute;
+    top: 70px; /* Adjust as needed */
+    right: 10px; /* Adjust as needed */
+    width: fit-content;
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    display: block;
+  }
+  
+  .circle:hover .dropdown-menu {
+    display: block;
+  }
+  
+  .dropdown-menu ul {
+    width: fit-content;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .dropdown-menu li {
+    width: fit-content;
+    padding: 5px 0;
   }
   
