--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,7 +3,7 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin: 50px auto;
+    margin: 1px;
     padding: 20px;
     max-width: 400px;
     background-color: #c6c6c6; /* Light gray-blue background */
