--- a/src/css/recipe_display.css
+++ b/src/css/recipe_display.css
@@ -8,7 +8,8 @@
 
 .recipe-scrollable-list {
     overflow-y: scroll;
-    height: 50vw;
+    max-height: 70vw;
+    padding-right: 10px;
 }
 
 .recipe-paged {
