--- a/src/css/left_side_menu.css
+++ b/src/css/left_side_menu.css
@@ -1,4 +1,8 @@
-  .image_icon{
+.container-for-left-side {
+  max-height: 100vh ;
+}
+
+.image_icon{
     position: absolute;
     top: 15px; 
     left: 20px; 
@@ -19,26 +23,28 @@
   }
   
   .menu {
-    height: 100%;
+    height: 100vh;
     min-width: 24vw;
     max-width: 24vw;
 
     border-left: 1px solid gray;
     position: relative;  
-    background-color: #eee; /* Optional: Highlight on hover */
-
-    /* background-color: #ffffff; */
+    background-color: #1e1e1e; /* Optional: Highlight on hover */
+    color: white !important;
 
     border-right: 2px solid #000000;
     padding-right: 2px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     display: block;
+
   }
 
   .empty_space_in_my_head{
     margin: 0;
     padding: 0;
-    height: 70px;
+    height: 7vw;
+    z-index: -1;
+    position: relative;
   }
   
   .circle:hover .dropdown-menu {
