--- a/src/css/page.css
+++ b/src/css/page.css
@@ -2,34 +2,28 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-html, body{ 
+html > body { 
   margin: 0;    
   padding: 0; 
+  height: 100vh;
 }
 
 body {
-  max-height: 100vw; 
+  max-height: 100vh; 
   width: 100%;  
 }
 
-.App {
-  height: 100%;
+html > body > #root > .App {
+  max-height: 100vh;
   display: flex;
   box-sizing: border-box;
 }
 
-.container-for-left-side {
-  height: 100wv;
-  min-width: fit-content;
-  width: fit-content;
-  margin:0;
-  padding:0;
-  display: block;
-}
 
 .container-for-right_side {
   display: block;
   width: 100%;
+  overflow-y: scroll; /*remove later*/
 }
 
 .container-for-profile-circle {
