--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,3 +1,11 @@
+.nice-background-image {
+  height: 100vh;
+  width: 100vw;
+  /* image from: https://www.snixykitchen.com/gluten-free-fried-fish-tacos-with-chipotle-cream-sauce/ */
+  background-image: url('../assets/fish_taco.jpg');
+  background-size:100% ;
+}
+
 .login-container {
     position: absolute;
     top: 40%;
@@ -6,7 +14,7 @@
     margin: 1px;
     padding: 20px;
     max-width: 400px;
-    background-color: #c6c6c6; /* Light gray-blue background */
+    background-color: rgb(198, 198, 198, 0.7); /* Light gray-blue background */
     border-radius: 10px; /* Smooth edges */
     text-align: center; /* Center the whole form */
     font-family: 'Roboto', sans-serif; /* Use Roboto font */
