--- a/src/css/page.css
+++ b/src/css/page.css
@@ -26,8 +26,53 @@ html > body > #root > .App {
   overflow-y: scroll; /*remove later*/
 }
 
+.loading-display-container {
+  color: #4f4f4f;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+.loading-status{
+  font-style: italic;
+}
+.lds-dual-ring {
+  transform: translate(0, -140%);
+  margin: 0 10px;
+}
+.lds-dual-ring,
+.lds-dual-ring:after {
+  box-sizing: border-box;
+}
+.lds-dual-ring {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  border-radius: 50%;
+  border: 2px solid currentColor;
+  border-color: currentColor transparent currentColor transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+
 .container-for-profile-circle {
   height: 65px;
+  display: flex;
 }
 
 /* * {
