--- a/src/css/profile_circle.css
+++ b/src/css/profile_circle.css
@@ -1,15 +1,11 @@
-.container {
-    position: relative;
-    font-family: system-ui;
-    color: #000000; /* Adjust color as needed */
-  }
+
   
   .circle {
     position: absolute;
     top: 20px; /* Adjust as needed */
     right: 20px; /* Adjust as needed */
     width: 40px; /* Adjust as needed */
-    height: 40px; /* Adjust as needed */
+    height: 40px; 
     background-color: #ffffff; /* Adjust color as needed */
     border: 1px solid #000000;
     border-radius: 50%;
@@ -20,6 +16,8 @@
   }
   
   .letter {
+    font-family: system-ui;
+    color: #000000;
     font-size: 24px; /* Adjust font size as needed */
   }
   
