--- a/src/css/recipe_control.css
+++ b/src/css/recipe_control.css
@@ -1,12 +1,3 @@
-.container-for-left-side {
-  height: 70vw;
-  min-width: fit-content;
-  width: fit-content;
-  margin:0;
-  padding:0;
-  display: block;
-}
-
 .menu ul {
   list-style: none;
   padding: 1px;
@@ -80,19 +71,15 @@
 
 .recipe-generate {
   display: flex;
-  align-items: center !important;
   border-top: 1px solid #acacac !important;
+  padding-top: 5px;
+  margin: 0;
+  justify-content: center;
+  align-content: center;
+  max-height: fit-content;
 }
 .recipe-generate .button-generate-suggestions {
   cursor: pointer;
-
-  margin-bottom: 6px;
-  margin-top: 15px;
-  margin-left: auto;
-  margin-right: auto;
-
-  /* width: 70%; */
-
   font-weight: bold;
   font-size: 15px;
 }
